Fixed Firebase key issue. Fixed dropdown gap issue.

--- a/style/add-Task/addTask.assigned.css
+++ b/style/add-Task/addTask.assigned.css
@@ -30,7 +30,6 @@
 .assignedDropdown {
   border: 1px solid #d1d1d1;
   border-radius: 8px;
-  margin-top: 6px;
   max-height: 200px;
   overflow-y: auto;
   justify-content: normal;
@@ -105,6 +104,7 @@
   display: flex;
   gap: 8px;
   margin-top: 8px;
+  margin-bottom: 4px;
 }
 
 .dropDownArrow.rotate {
