--- a/style/add-Task/addTask.priority.css
+++ b/style/add-Task/addTask.priority.css
@@ -1,7 +1,7 @@
 .priority {
   display: flex;
   gap: 16px;
-  margin-bottom: 24px;
+  margin-bottom: 32px;
   margin-top: 6px;
 }
 
