--- a/style/add-Task/addTask.utils.css
+++ b/style/add-Task/addTask.utils.css
@@ -59,3 +59,7 @@ select::-ms-expand {
 .toastText {
   margin-right: 18px;
 }
+
+textarea {
+  resize: none;
+}
